# binance-cxx-api-v2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.MD  example.cpp  exampleTEST.cpp  httpPerformanceTest.cpp
include/: binance.h  binance_websocket.h
plot/: exampleWatch.cpp  exampleWatchThreads.cpp
plot/libplot/: data_proc.c
plot/libplot/include/plot/: plot.h
src/: binance_account.cpp  binance_market.cpp  binance_server.cpp  binance_utils.cpp  binance_websocket.cpp
